# moss

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Mossfile  README.md
.github/workflows/: ci.yml
crates/moss-cli/: Cargo.toml
crates/moss-cli/src/: cli.rs  completions.rs  main.rs  output.rs
crates/moss-core/: Cargo.toml
crates/moss-core/src/: error.rs  graph.rs  lib.rs  parallel.rs  ready.rs  runner.rs  watcher.rs
crates/moss-parser/: Cargo.toml
crates/moss-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs
docs/: migration.md  syntax.md
tests/integration/: Cargo.toml  integration.rs
